--- a/README.adoc
+++ b/README.adoc
@@ -1,23 +1,20 @@
-image::https://clearpointnz.github.io/connect/images/connect-logo.png[]
-by link:https://clearpoint.co.nz[ClearPoint]
+= connect-runnable-prescan-plugin
 
-= Description
+== Description
 This is a pre-scan plugin
 
 == Installation Instructions
 `mvn clean install`
 
-'''
-
-= Connect
-Connect is a Continuous Delivery Platform from link:http://clearpoint.co.nz[ClearPoint]  
-
-Connect gathers our best practice approaches to deploying working software into the cloud with confidence.
-
-The main Connect repository is link:https://github.com/ClearPointNZ/connect[here]
-
 == Documentation
-The main documentation for Connect can be found here: link:http://docs.connect.cd[docs.connect.cd]
+There is no further specific documentation for this.
 
-== Help
-Any queries on the Connect platform can be sent to us link:here[connect@clearpoint.co.nz]
+The main documentation for link:http://connect.cd[Connect] can be found at: link:http://docs.connect.cd[docs.connect.cd]
+
+'''
+image::http://website.clearpoint.co.nz/connect/connect-logo-on-white-border.png[]
+link:http://connect.cd[Connect] is a Continuous Delivery Platform that gathers best practice approaches for deploying working software into the cloud with confidence.
+
+The main documentation for link:http://connect.cd[Connect] can be found at link:http://docs.connect.cd[docs.connect.cd]
+
+Any queries on the link:http://connect.cd[Connect] platform can be sent to: connect@clearpoint.co.nz
